# industrialbenchmark-light

./: README.md  pyproject.toml
ib_light/: IDS_simple.py
scripts/: example.py
