###
# (C) Copyright Siemens AG 2023
#
# SPDX-License-Identifier: MIT
###

[tool.poetry]
name = "ib-light"
version = "0.1.0"
description = "Lightweight python implementation of the industrial benchmark"
authors = ["Daniel Hein <hein.daniel@siemens.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
industrial-benchmark-python = "^2.0"
scipy = "^1.10.1"
matplotlib = "^3.7.1"
numpy = "<1.24"

[build-system]
requires = ["poetry_core>=1.0.0"]
